--- a/client/src/Contatct/contatct.css
+++ b/client/src/Contatct/contatct.css
@@ -19,7 +19,7 @@ background-color: whitesmoke;
 
 
 
-.contact-me-buttons {
+.contact-me-a-tag {
     border: 1px solid green;
     display: grid;
     width: 30%;
@@ -31,13 +31,14 @@ background-color: whitesmoke;
     font-size: 30px;
 }
 
-.contact-me-buttons button {
+.contact-me-a-tag a {
     background-color: white;
     color: black;
     border: 2px solid #008CBA;
     margin: 5px;
     width: 200px;
     height: 150px;
+    padding-top: 20px;
     text-align: center;
     font-size: 15px;
     transition-duration: 0.4s;
@@ -46,7 +47,7 @@ background-color: whitesmoke;
 
 }
 
-.contact-me-buttons button:hover {
+.contact-me-a-tag a:hover {
     background-color: #008CBA;
     color: white;
 }
