--- a/client/src/Contatct/cotact-form/contact-form.css
+++ b/client/src/Contatct/cotact-form/contact-form.css
@@ -1,9 +1,56 @@
 .contact-me-form {
-    border: 1px solid purple;
+
+    /* border: 1px solid purple; */
 
 }
 
-form {
+.contact-form {
     display: grid;
+    margin-left: 50px;
+}
 
+.contact-form input {
+    width: 400px;
+    border-radius: 5px;
+    margin: 10px;
+    border: 2px solid #008CBA;
+    height: 50px;
+
+}
+
+.contact-form textarea {
+    border-radius: 5px;
+
+    margin: 10px;
+    border: 2px solid #008CBA;
+    resize: none;
+    height: 150px;
+}
+
+.contact-form input:focus {
+
+    box-sizing: border-box;
+    border: 1px solid #008CBA;
+
+}
+
+.contact-form button {
+    
+    background-color: white;
+    color: black;
+    border: 2px solid #008CBA;
+    margin: 5px;
+    margin-left: 150px;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 900;
+    transition-duration: 0.4s;
+    border-radius: 5px;
+}
+
+.contact-form button:hover {
+    background-color: #008CBA;
+    color: white;
 }
