--- a/client/src/components/Navigation/navigation.css
+++ b/client/src/components/Navigation/navigation.css
@@ -10,12 +10,24 @@
 .navigation-menu li {
     list-style: none;
     font-size: 25px;
-    margin: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 5px;
 }
 
-
-
-.navigation-menu {
+.nav-paf ul {
+    margin-right: 20px;
     display: flex;
     justify-content: center;
+}
+
+.nav-paf {
+    margin-top: 100px;
+    border-radius: 20px;
+    background-color: #0000002a;
+    position: fixed;
+    left: 40%;
+    bottom: 25px;
+    width: 200px;
+
 }
