--- a/client/src/components/Contact/contact.css
+++ b/client/src/components/Contact/contact.css
@@ -9,7 +9,7 @@
 
 .main-root-cotanct-page {
     padding-bottom: 50px;
-    background-color: whitesmoke;
+    background-color: white;
 }
 
 .heading-contact-page {
