--- a/client/src/components/Portfolio/portfolio.css
+++ b/client/src/components/Portfolio/portfolio.css
@@ -2,6 +2,7 @@
     background-color: whitesmoke;
     display: grid;
     justify-content: center;
+    padding-bottom: 40px;
 }
 
 .portfolio-root-element h2 {
@@ -24,12 +25,16 @@
 
 
 .project-element {
-    padding: 15px;
-    border-radius: 5px;
+    /* padding: 15px; */
+    padding-top: 35px;
     text-align: center;
+    background-color: white;
+    border-radius: 10px;
+    -webkit-box-shadow: 5px 3px 10px -1px #000000;
+    box-shadow: 5px 3px 10px -1px #000000;
     width: 250px;
     margin: 20px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .project-element a {
@@ -54,5 +59,5 @@
     display: flex;
     justify-content: center;
     height: 350px;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
