--- a/client/src/components/Portfolio/portfolio.css
+++ b/client/src/components/Portfolio/portfolio.css
@@ -18,9 +18,12 @@
 .portfolio-image-element {
     height: 150px;
     width: 150px;
+    -webkit-box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.33);
+    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.33);
 }
 
-.project-element p {
+.project-element:hover {
+    transform: scale(1.1);
 }
 
 
