--- a/client/src/components/AboutMe/about-me.css
+++ b/client/src/components/AboutMe/about-me.css
@@ -19,6 +19,7 @@
 
 .about-me-experience-frame {
     display: flex;
+    flex-direction: column;
 }
 
 .about-me-experience-frame div {
@@ -83,4 +84,5 @@
 
 .img-frame-about {
     width: 300px;
+    box-shadow: 36px -35px 0px -24px #7a98fa;
 }
