--- a/client/src/components/Experience/experience.css
+++ b/client/src/components/Experience/experience.css
@@ -6,6 +6,7 @@
 .experience-root-element h2 p {
     margin: 0;
     font-size: 15px;
+ 
 }
 
 .experience-root-element h2 {
@@ -14,12 +15,15 @@
 
 .experience-root-element {
     padding: 40px;
+    z-index: 1;
 
 }
 
 .experience-skill-frame {
     display: flex;
     justify-content: center;
+    font-weight:600;
+
 
     /* border: 1px solid red; */
 }
@@ -27,6 +31,7 @@
 .experience-skill-frame h5 {
     margin-top: 20px;
     text-align: center;
+    font-size: 25px;
 }
 
 .front-end-skills {
@@ -37,7 +42,7 @@
     border-radius: 10px;
     -webkit-box-shadow: 5px 3px 10px -1px #000000;
     box-shadow: 5px 3px 10px -1px #000000;
-    
+
     /* border: 1px solid green; */
 
 }
@@ -78,3 +83,18 @@
     color: #008CBA;
     font-size: 30px;
 }
+
+/* slider-css */
+
+.slider-container {
+    width: 500px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+    border: 10px solid #ffffff;
+    border-radius: 8px;
+    box-shadow: -1px 5px 15px black;
+}
+
