--- a/client/src/components/AboutMe/about-me.css
+++ b/client/src/components/AboutMe/about-me.css
@@ -76,6 +76,13 @@
     display: flex;
     justify-content: center;
 }
+.text-paragrph-about-me  p {
+    border-radius: 5px;
+    width: 60%;
+    text-align: center;
+    
+}
+
 
 .lets-talk-button {
     display: flex;
