--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
-    font-family: 'Playfair Display', serif;
+    /* font-family: 'Playfair Display', serif; */
+    font-family: 'Roboto', sans-serif;
 
 }
 
+.section-heading {
+    font-family: 'Playfair Display', serif;
+
+}
 
 
 
