--- a/client/src/components/Portfolio/portfolio.css
+++ b/client/src/components/Portfolio/portfolio.css
@@ -65,3 +65,10 @@
     /* border: 1px solid blue; */
 }
 
+@media only screen and (max-width: 425px) {
+    .portfolio-project-elements{
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+    }
+}
