--- a/client/src/components/Contact/cotact-form/contact-form.css
+++ b/client/src/components/Contact/cotact-form/contact-form.css
@@ -35,7 +35,7 @@
 }
 
 .contact-form button {
-    
+
     background-color: white;
     color: black;
     border: 2px solid #008CBA;
@@ -53,4 +53,38 @@
 .contact-form button:hover {
     background-color: #008CBA;
     color: white;
+}
+
+.email-heading {
+    text-align: center;
+}
+
+
+
+@media only screen and (max-width: 425px) {
+
+    .contact-me-form {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contact-form {
+        margin-left: 0;
+    }
+
+    .contact-form input {
+        width: 335px;
+        border-radius: 5px;
+        margin: 10px;
+        border: 2px solid #008CBA;
+        height: 50px;
+    }
+
+    .contact-form button {
+        margin-left: 129px;
+    }
+
+
 }
