--- a/client/src/components/Experience/experience.css
+++ b/client/src/components/Experience/experience.css
@@ -83,3 +83,10 @@
     box-shadow: -1px 5px 15px black;
 }
 
+@media only screen and (max-width: 425px) {
+    .experience-skill-frame{
+        
+        flex-direction: column;
+        align-items: center;
+    }
+}
