update mobile version

--- a/client/src/components/AboutMe/about-me.css
+++ b/client/src/components/AboutMe/about-me.css
@@ -114,7 +114,7 @@
 
     .about-me-text {
         width: 100%;
-        height: 462px;
+        /* height: 462px; */
 
         overflow: hidden;
         /* background: rgb(255, 255, 255);
