--- a/client/src/components/Experience/experience.css
+++ b/client/src/components/Experience/experience.css
@@ -6,7 +6,7 @@
 .experience-root-element h2 p {
     margin: 0;
     font-size: 15px;
- 
+
 }
 
 .experience-root-element h2 {
@@ -84,9 +84,16 @@
 }
 
 @media only screen and (max-width: 425px) {
-    .experience-skill-frame{
-        
+    .experience-skill-frame {
+
         flex-direction: column;
         align-items: center;
     }
+
+    .skills-square {
+        height: 280px;
+        width: 320px;
+    }
+
+
 }
