--- a/client/src/components/Portfolio/portfolio.css
+++ b/client/src/components/Portfolio/portfolio.css
@@ -35,7 +35,8 @@
     border-radius: 10px;
     -webkit-box-shadow: 5px 3px 10px -1px #000000;
     box-shadow: 5px 3px 10px -1px #000000;
-    width: 250px;
+    width: 270px;
+    /* height: 350px; */
     margin: 20px;
     /* border: 1px solid red; */
 }
@@ -70,5 +71,14 @@
         height: auto;
         flex-direction: column;
         align-items: center;
+    }
+
+    .project-element{
+        width: 270px;
+        height: 330px;
+    }
+
+    .portfolio-image-element{
+        margin-bottom: 20px;
     }
 }
