update mobile version

--- a/client/src/components/Contact/contact.css
+++ b/client/src/components/Contact/contact.css
@@ -65,5 +65,10 @@
         align-items: center;
     }
 
+    .contact-me-a-tag a{
+
+        margin-bottom: 20px;
+        width: 300px;
+    }
 
 }
