--- a/client/src/components/Navigation/navigation.css
+++ b/client/src/components/Navigation/navigation.css
@@ -2,7 +2,7 @@
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
-border-radius: 50%;
+    border-radius: 50%;
     /* 
     border-radius: 50%; */
     text-decoration: underline;
@@ -33,8 +33,8 @@ border-radius: 50%;
 }
 
 .nav-paf {
-    
-    
+
+
     margin-top: 100px;
     border-radius: 20px;
     background-color: #0000002a;
@@ -46,10 +46,12 @@ border-radius: 50%;
 }
 
 @media only screen and (max-width: 425px) {
-    .nav-paf {
+    /* .nav-paf {
         left: 9%;
 
-    }
-    }
+    } */
 
-    
+    .navigation-menu{
+        display: none;
+    }
+}
