--- a/client/src/components/AboutMe/about-me.css
+++ b/client/src/components/AboutMe/about-me.css
@@ -100,6 +100,13 @@
     font-size: 17px;
 }
 
+.more {
+    display: inline;
+}
+.nomore{
+    display: none;
+}
+
 
 @media only screen and (max-width: 425px) {
 
