--- a/client/src/components/Experience/experience.css
+++ b/client/src/components/Experience/experience.css
@@ -149,6 +149,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-right: 30px;
 
     }
 
@@ -167,7 +168,7 @@
         display: inline-block;
         font-size: 12px;
         /* margin: 4px 10px; */
-        margin-left: 20px;
+        /* margin-left: 20px; */
         transition-duration: 0.4s;
         cursor: pointer;
         border-radius: 5px;
