--- a/client/src/components/Experience/experience.css
+++ b/client/src/components/Experience/experience.css
@@ -111,10 +111,10 @@
     transition-duration: 600ms;
 
 }
-
+/* 
 .cetificate-tray li:nth-child(1) {
     border: 1px solid black;
-}
+} */
 
 .hideCertificates {
     display: none;
