--- a/client/src/components/Navigation/navigation.css
+++ b/client/src/components/Navigation/navigation.css
@@ -2,6 +2,7 @@
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 5px; 
     border-radius: 50%;
     /* 
     border-radius: 50%; */
@@ -23,7 +24,7 @@
     font-size: 25px;
     margin-left: 15px;
     margin-right: 15px;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .nav-paf ul {
@@ -50,8 +51,16 @@
         left: 9%;
 
     } */
-
     .nav-paf{
-        /* display: none; */
+        position: fixed;
+        left: auto;
+        bottom: 0px;
+        width: 100%;
+        background-color: #dfdede ;
+        border-radius:0px;
     }
+
+    /* .nav-paf{
+        display: none;
+    } */
 }
