resizesing elements update css

--- a/client/src/components/AboutMe/about-me.css
+++ b/client/src/components/AboutMe/about-me.css
@@ -154,8 +154,16 @@
 
 
     .about-me-elements div {
-        margin: 20px;
+        /* margin: 30px; */
+        width: 100%;
     }
 
+    .about-me-experience-frame  {
+       
+    }
+
+    /* .project-info1 {
+        width: 100%;
+    } */
 
 }
