--- a/client/src/components/Navigation/navigation.css
+++ b/client/src/components/Navigation/navigation.css
@@ -1,10 +1,13 @@
 .active-a-tag {
-    padding-bottom: 10px;
+    /* padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: 5px; 
+    padding-top: 5px; */
     border-radius: 50%;
+    padding: 10px;
+    margin-right: 10px;
     /* 
+
     border-radius: 50%; */
     text-decoration: underline;
     background-color: rgba(0, 0, 0, 0.258);
@@ -22,42 +25,53 @@
 .navigation-menu li {
     list-style: none;
     font-size: 25px;
-    margin-left: 15px;
-    margin-right: 15px;
+    /* margin-left: 15px; */
+    /* margin-right: 15px; */
     margin-top: 10px;
 }
 
 .nav-paf ul {
-    margin-right: 30px;
-    display: flex;
-    justify-content: center;
+    
+
+    /* old version */
+    /* margin-right: 30px; */
+    /* display: flex;
+    justify-content: center; */
 }
 
 .nav-paf {
-
-
-    margin-top: 100px;
+    /* margin-top: 100px;
     border-radius: 20px;
     background-color: #0000002a;
     position: fixed;
     left: 40%;
     bottom: 25px;
-    width: 320px;
+    width: 320px; */
 
+
+    margin-top: 20px;
+    border-radius: 20px;
+    background-color: #b7b7b7;
+    position: fixed;
+    right: 1%;
+    top: 1%;
+    width: 83px;
 }
 
 @media only screen and (max-width: 425px) {
+
     /* .nav-paf {
         left: 9%;
 
     } */
-    .nav-paf{
+    .nav-paf {
         position: fixed;
         left: auto;
         bottom: 0px;
         width: 100%;
-        background-color: #dfdede ;
-        border-radius:0px;
+        background-color: #dfdede;
+        border-radius: 0px;
+        z-index: 199;
     }
 
     /* .nav-paf{
