update css navigation style

--- a/client/src/components/Footer/footer-page.css
+++ b/client/src/components/Footer/footer-page.css
@@ -2,5 +2,5 @@
     padding: 30px;
     text-align: center;
     height: 80px;
-    background-color: rgb(228, 228, 228)
+    background-color: #FF7C7C
 }
