--- a/client/src/components/Navigation/navigation.css
+++ b/client/src/components/Navigation/navigation.css
@@ -3,13 +3,13 @@
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 5px; */
-    border-radius: 50%;
-    padding: 10px;
-    margin-right: 10px;
-    /* 
+    /* padding: 10px; */
+    /*    border-radius: 50%; */
 
-    border-radius: 50%; */
+    margin: -10px;
+    padding: 10px;
     text-decoration: underline;
+    border-radius: 20%;
     background-color: rgba(0, 0, 0, 0.258);
 }
 
@@ -17,6 +17,9 @@
     color: #008CBA;
 }
 
+.navigation-menu {
+    margin-left: 0px;
+}
 
 .navigation-menu a:hover {
     color: #0b5a74;
@@ -25,13 +28,12 @@
 .navigation-menu li {
     list-style: none;
     font-size: 25px;
-    /* margin-left: 15px; */
-    /* margin-right: 15px; */
+   
     margin-top: 10px;
 }
 
 .nav-paf ul {
-    
+
 
     /* old version */
     /* margin-right: 30px; */
@@ -49,29 +51,55 @@
     width: 320px; */
 
 
-    margin-top: 20px;
+    margin-top: 30px;
+    padding-top: 10px;
     border-radius: 20px;
     background-color: #b7b7b7;
     position: fixed;
     right: 1%;
     top: 1%;
-    width: 83px;
+    width: 84px;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 600px) {
 
     /* .nav-paf {
         left: 9%;
 
     } */
+
+    .navigation-menu li {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .nav-paf ul {
+
+
+        /* old version */
+        margin-right: 30px;
+        display: flex;
+        justify-content: center;
+    }
+
     .nav-paf {
         position: fixed;
-        left: auto;
-        bottom: 0px;
+        left: 0%;
+        bottom:0%;
+        right: initial;
+        top: initial;
+
+
+
+        margin-top: 100px;
+        border-radius: 20px;
+        background-color: #0000002a;
         width: 100%;
         background-color: #dfdede;
         border-radius: 0px;
         z-index: 199;
+
+
     }
 
     /* .nav-paf{
