update CV and css

--- a/client/src/components/Experience/experience.css
+++ b/client/src/components/Experience/experience.css
@@ -40,8 +40,8 @@
     height: 300px;
     width: 350px;
     border-radius: 10px;
-    -webkit-box-shadow: 5px 3px 10px -1px #000000;
-    box-shadow: 5px 3px 10px -1px #000000;
+    -webkit-box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.33);
+    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.33);
 
     /* border: 1px solid green; */
 
